--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "## Updating the __init__ method\n",
     "\n",
-    "Great! Now, update you `School` definition in school.py to also include a `roster` attribute upon initialization. Initialize the `roster` attribute as an empty dictionary. Later, you'll use this empty roster dictionary to list students of each grade. For example, a future entry in the roster dictionary could be `{\"9\": [\"John Smith\", \"Jane Donahue\"]}`)."
+    "Great! Now, update your `School` definition in school.py to also include a `roster` attribute upon initialization. Initialize the `roster` attribute as an empty dictionary. Later, you'll use this empty roster dictionary to list students of each grade. For example, a future entry in the roster dictionary could be `{\"9\": [\"John Smith\", \"Jane Donahue\"]}`)."
    ]
   },
   {
@@ -194,13 +194,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Tony Hawk', 'Ryan Sheckler']\n",
-      "['Peter Piper']\n"
+      "['Tony Hawk', 'Ryan Sheckler', 'Tony Hawk', 'Ryan Sheckler']\n",
+      "['Peter Piper', 'Peter Piper']\n"
      ]
     }
    ],
    "source": [
-    "#While annoying, you do need to reinstantiate the updated class and repform the previous methods\n",
+    "#While annoying, you do need to reinstantiate the updated class and re-perform the previous methods\n",
     "school = School(\"Middletown High School\") \n",
     "school.add_student(\"Peter Piper\", 12)\n",
     "school.add_student(\"Kelly Slater\", 9)\n",
@@ -236,10 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "{12: ['Peter Piper'],\n",
-       " 9: ['Kelly Slater'],\n",
-       " 10: ['Ryan Sheckler', 'Tony Hawk'],\n",
-       " 11: ['Bethany Hamilton']}"
+       "{12: ['Peter Piper', 'Peter Piper'],\n",
+       " 9: ['Kelly Slater', 'Kelly Slater'],\n",
+       " 10: ['Ryan Sheckler', 'Ryan Sheckler', 'Tony Hawk', 'Tony Hawk'],\n",
+       " 11: ['Bethany Hamilton', 'Bethany Hamilton']}"
       ]
      },
      "execution_count": 8,
@@ -262,9 +262,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
